<resources>
    <string name="app_name">Smart Utilities</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--Landing Screen-->
    <string name="title_login_button">Login</string>
    <string name="title_signup_button">Sign Up</string>
    <string name="title_new_connection">New Connection</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_signup">SignupActivity</string>

    <!-- Strings related to login -->
    <string name="promt_consumer_id">Consumer No. or Mobile No.</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_empty_password">Enter Password</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Do you want to close this application?</string>

    <!-- Strings related to signup -->
    <string name="promt_sconsumer_id">Consumer No.</string>
    <string name="action_register">Register</string>
    <string name="action_next">Next</string>
    <string name="prompt_email_id">Enter Alternate Email</string>
    <string name="prompt_mobile_number">Enter Alternate Mobile Number</string>
    <string name="prompt_epassword">Enter Password</string>
    <string name="prompt_repassword">Retype Password</string>
    <string name="error_valid_emailid">Enter valid email id</string>
    <string name="error_valid_mobile_number">Enter 10 digit mobile number</string>
    <string name="error_retype_password">Password missmatch</string>
    <string name="prompt_otp">Enter Code</string>
    <string name="title_verify_number">Verify Number</string>
    <string name="title_verify_resend">We have resent a verification code on your</string>
    <string name="title_verify_desc_line1">We have sent a verification code on your</string>
    <string name="title_verify_desc_line2">registered mobile number </string>
    <string name="action_verify">Verify</string>
    <string name="error_receive_otp">Didn\'t get verification code? </string>
    <string name="title_cancel">Cancel</string>
    <string name="title_success">Congratulations</string>
    <string name="title_success_desc">You have successfully registered as a Smart Utilities Consumer</string>
    <string name="title_success_login">Now you can login with your</string>
    <string name="title_success_primary_ca_number">Primary CA Number - </string>
    <string name="title_success_registered_mobile">Registered Mobile Number - </string>
    <string name="title_success_add">Add additional CA number</string>
    <string name="error_empty_consumer_id">  Enter Consumer Number   </string>



    <string-array name="City">
        <item>Select City</item>
        <item>Muzaffarpur</item>
        <item>Aurangabad</item>
        <item>Nagpur</item>
        <item>pune</item>

    </string-array>

    <string-array name="type">
        <item>Connection Type</item>
        <item>Residential</item>
        <item>Commercial</item>
        <item>Industrial</item>
        <item>Other</item>

    </string-array>


    <string-array name="complaints">
        <item>Complaint Type</item>
        <item>complaint 1</item>
        <item>complaint 2</item>
        <item>complaint 3</item>
        <item>Other</item>

    </string-array>



    <string-array name="complaintid">
        <item>101245789</item>
        <item>21457854</item>
        <item>514258478</item>
        <item>321457896</item>

    </string-array>


    <string-array name="service">
        <item>Service Type</item>
        <item>service 1</item>
        <item>service 2</item>
        <item>service 3</item>
        <item>Other</item>

    </string-array>


    <!--Strings related to new connection-->
    <string name="prompt_newcomnection_full_name">Enter Full Name</string>
    <string name="prompt_newcomnection_address_line_1">Address Line 1</string>
    <string name="prompt_newcomnection_address_line_2">Address Line 2</string>
    <string name="prompt_newcomnection_address_line_3">Address Line 3</string>
    <string name="prompt_newcomnection_mobile_number">Enter Your Mobile Number</string>
    <string name="prompt_newcomnection_nearest_consumer_id">Enter Nearest Consumer no/Pole no</string>
    <string name="prompt_newcomnection_email_id">Enter Email Id</string>
    <string name="prompt_newcomnection_type_of_connection">Type of connection</string>
    <string name="prompt_newcomnection_type_residential">Residential</string>
    <string name="prompt_newcomnection_type_commercial">Commercial</string>
    <string name="prompt_newcomnection_type_industrial">Industrial</string>


    <string name="edit_contact_detail">Edit Contact Details</string>

    <string name="prompt_newcomnection_type_other">Other</string>

    <string name="prompt_newcomnection_action_submit">Submit</string>
    <array name="connection_types">
        <item>Residential</item>
        <item>Commercial</item>
        <item>Industrial</item>
        <item>Other</item>
    </array>

    <string name="title_activity_landing_skip_login">LandingSkipLogin</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_activity_main_sl">ActivityMainSL</string>

    <!-- navigation drawer skip login labels  -->
    <string-array name="nav_drawer_labels_sl">
        <item>Quick Pay</item>
        <item>Login</item>
        <item>Register</item>
        <item>Apply for New Connection</item>
        <item>My Tariffs</item>
        <item>Tips</item>
        <item>About Us</item>
        <item>Contact Us</item>
    </string-array>

    <string name="quick_pay">Quick Pay</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="apply_for_new_connection">New Connection</string>
    <string name="my_tariffs">My Tariffs</string>
    <string name="tips">Tips</string>
    <string name="about_us">About Us</string>
    <string name="contact_detail">Contact Details</string>
    <string name="my_profile">My Profile</string>
    <string name="my_tariff">My Tariff</string>
    <string name="locate_us">Locate Us</string>
    <string name="faq">FAQ</string>
    <string name="payment_history">Payment History</string>
    <string name="managed_account">Managed Account</string>
    <string name="complaint">Complaints</string>
    <string name="services">Services</string>
    <string name="feedback">Feedback</string>

    <string name="services_header">Request Services</string>


    <string name="raise_complaint">Raise Complaint</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="transactionid">Transaction No:</string>
    <string name="paymentamount">Payment Amount</string>
    <string name="transactiontype">Transaction Type</string>


    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--My Profile fragment-->
    <string name="change_details">Change Details</string>
    <string name="change_password">Change Password</string>
    <string name="prompt_consumer_id">966354</string>
    <string name="prompt_consumer_email_id">abcd@gmail.com</string>
    <string name="save_details">Save</string>
    <string name="save_password">Save</string>
    <string name="prompt_old_password">Old Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <!--Services fragment-->
    <string name="remark">Remark</string>
    <string name="submit">Submit</string>

    <!--My Tariff Fragment-->
    <string name="rate_schedule">Rate Schedule</string>
    <string name="note_content">1) Additional fixed charge of Rs 100 per 10 kw load or part three of above 10 KW load should be payable.</string>

    <!--Locate Us Fragment-->

    <string-array name="CSD_Centers">
        <item>All CSD Centers</item>
        <item>Amgola Road</item>
        <item>Saraiganj</item>
        <item>Kachhi Sarai</item>
        <item>Pakki Sarai</item>

    </string-array>


    <!--Quick pay fragment-->
    <string name="prompt_ca_number">Enter Acc Number</string>
    <string name="prompt_proceed">Proceed</string>
    <string name="prompt_total_amount">Enter Total Amount</string>
    <string name="prompt_proceed_to_pay">Proceed to Pay</string>

    <string name="forgotpass_msg">Password Reset Link Sent on Registered Email.</string>
    <string name="forgotpass_msgtwo">If you dont receive mail,Check your Spam Folder or Contact to support team.</string>


    <string name="title_activity_forgot">ForgotActivity</string>
    <string name="want_to">Want to</string>
    <string name="new_n_connection">New \n Connection</string>
    <string name="home">HOME</string>
    <string name="nagpur">NAGPUR</string>

    <string name="allow_to_ask_permission_again">Allow to Ask Again</string>
    <string name="permission_rejected_already">" permission(s) were previously rejected"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_about_us">Company is entrusted to provide quality power supply.Maintaning the dedicated focus on distributing power supply.</string>
    <string name="residential">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="industrial">Industrial</string>
    <string name="other">Other</string>


    <string name="tipone"> Switch Off the lights when not in use.</string>
    <string name="tiptwo">AC Temperature should be set between 24-26. </string>
    <string name="tipthree">Use LEDs instead of regular Tubelights.</string>

    <string name="complaintidmsg">Your Complaint Registered with us</string>
    <string name="login_error_102">Logged in by other user</string>
    <string name="login_error_101">Consumer No. and Password Not Matched</string>
    <string name="login_error_null">Please Contact To Server Admin</string>
    <string name="er_data_not_avaliable">Data Not Avaliable</string>
    <string name="error_internet_not_connected">Please Check Internet Connection</string>


</resources>
