<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" android:padding="@dimen/margin_large" android:background="@drawable/dialog_bg">


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_verify_number"
            android:textColor="@color/cardview_dark_background"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/button_text_size_large"

            />
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content" android:orientation="vertical">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content" android:orientation="vertical" android:gravity="center_horizontal">

               <TextView

                   android:layout_marginTop="@dimen/margin_medium"
                   android:textAlignment="center"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/title_verify_desc_line1"

                   android:textSize="@dimen/button_text_size_small"

                   />

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_horizontal">
               <TextView
                   android:textAlignment="center"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/title_verify_desc_line2"

                   android:textSize="@dimen/button_text_size_small"

                   />
               <TextView

                   android:textAlignment="center"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text=" 959XXXX117"
                   android:textColor="@color/colorPrimary"

                   android:textSize="@dimen/button_text_size_small"
                   />
                   </LinearLayout>
           </LinearLayout>


           <android.support.design.widget.TextInputLayout

               android:id="@+id/inputLayoutOtp"
               android:layout_width="150dp"
               android:layout_height="wrap_content"
               app:errorTextAppearance="@style/error_appearance"
               android:layout_gravity="center_horizontal"

               >

               <EditText
                   android:layout_marginTop="20dp"
                   android:id="@+id/edit_otp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/prompt_otp"
                   android:imeActionId="@+id/login"
                   android:imeActionLabel="@string/action_sign_in_short"
                   android:imeOptions="actionUnspecified"
                   android:inputType="text"
                   android:maxLines="1"
                   android:singleLine="true"
                   android:textSize="@dimen/edit_text_size_medium"
                   android:gravity="center_horizontal"
                   android:paddingBottom="@dimen/margin_large"
                   />

           </android.support.design.widget.TextInputLayout>
           <android.support.v7.widget.AppCompatButton
               android:layout_marginTop="10dp"
               android:id="@+id/btn_verify"

               android:layout_width="match_parent"
               android:layout_height="@dimen/button_height"
               android:background="@drawable/red_button_rounded"
               android:text="@string/action_verify"
               android:textAppearance="@style/AlertDialog.AppCompat.Light"
               android:textColor="@color/colorTextWhite"
               android:textAllCaps="true"
               android:textSize="@dimen/button_text_size_medium" />

           <LinearLayout
               android:layout_marginTop="20dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:orientation="horizontal">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/error_receive_otp" />
               <TextView
                   android:id="@+id/action_resend"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text=" Resend"
                   android:textColor="@color/colorPrimaryDark"/>


           </LinearLayout>

           <LinearLayout
               android:id="@+id/action_cancel"
               android:layout_marginTop="30dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:gravity="center"
               android:orientation="horizontal" >

               <ImageView
                   android:layout_width="20dp"
                   android:layout_height="20dp"
                   android:src="@drawable/ic_action_skip_gray" />
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Cancel"
                 />


           </LinearLayout>




       </LinearLayout>
    </LinearLayout>
</RelativeLayout>