<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.essel.smartutilities.fragments.My_Profile_Change_Details">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v4.widget.NestedScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_large">




        <EditText
            android:id="@+id/consumer_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_consumer_id"
            android:inputType="number"
            android:maxLines="1"
            android:paddingTop="@dimen/margin_large"
            android:singleLine="true"
            android:textSize="@dimen/edit_text_size_medium"
            />





        <EditText
            android:id="@+id/cosumer_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_consumer_email_id"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingTop="@dimen/margin_large"
            android:singleLine="true"
            android:textSize="@dimen/edit_text_size_medium"
            />



        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/BTN_save_details"
            android:text="@string/save_details"
            android:textSize="@dimen/button_text_size_medium"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/colorTextWhite"/>
    </LinearLayout>


    </android.support.v4.widget.NestedScrollView>>
</FrameLayout>
