<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.essel.smartutilities.fragments.My_Profile_Change_Password">

        <android.support.v4.widget.NestedScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_large"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance"

                >

            <EditText
                android:id="@+id/editOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_old_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/edit_text_size_medium"
                />

             </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance"

                >

                <EditText
                    android:id="@+id/editNewPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_text_size_medium"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance"

                >

                <EditText
                    android:id="@+id/editConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/edit_text_size_medium"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/BTN_save_password"
                android:text="@string/save_details"
                android:textSize="@dimen/button_text_size_medium"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorTextWhite"/>



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>>
    </FrameLayout>
